
- v1.0.1000                                 -
---------------------------------------------
- 2020-06-06                                -
---------------------------------------------
.: WSW: Task: Design a new default user banner (WSW-24)
.: WSW: Task: Add a default profile image to item (WSW-27)
.: WSW: Task: Unpublished Items in category is displayed (WSW-31)

---------------------------------------------
- 2020-06-05                                -
---------------------------------------------
.: WSW: Task: QR code image slow render issue (WSW-25)
.: WSW: Task: Change Share URL to username (WSW-29)
.: WSW: Task: Prompt login when following without authentication (WSW-28)

---------------------------------------------
- 2020-05-30                                -
---------------------------------------------
.: WSW: Task: Update shop page layout (WSW-2)
.: WSW: Task: Update favorite page (WSW-7)
.: WSW: Task: Change favicon (WSW-22)
.: WSW: Task: Update shop mobile page layout (WSW-2)
.: WSW: Task: Update list item info (WSW-2)
.: WSW: Task: Save shop in searching page (WSW-7)

---------------------------------------------
- 2020-05-29                                -
---------------------------------------------
.: WSW: Task: Update profile settings (WSW-1)
.: WSW: Task: Disabled email changing (WSW-1)

---------------------------------------------
- 2020-05-18                                -
---------------------------------------------
.: WSW: Story: Searching Page Module (WSW-12)

---------------------------------------------
- 2020-05-17                                -
---------------------------------------------
.: WSW: Task: Profile Image Upload (WSW-4)

---------------------------------------------
- 2020-05-16                                -
---------------------------------------------
.: WSW: Story: Favorite Module (WSW-7)
.: WSW: Story: User Settings Module (WSW-1)

---------------------------------------------